--- a/maps/index.html
+++ b/maps/index.html
@@ -23,6 +23,12 @@
 	    <script>
 	    	var directionsService, trajectory, routes = [], map;
 
+	    	if (typeof(Number.prototype.toRad) === "undefined") {
+				Number.prototype.toRad = function() {
+					return this * Math.PI / 180;
+				}
+			}
+
 			function initMap() {
 				// Create a map object and specify the DOM element for display.
 				map = new google.maps.Map(document.getElementById('map'), {
@@ -32,6 +38,8 @@
 				});
 
 				directionsService = new google.maps.DirectionsService();
+				calRoute();
+				drawLines();
 			}
 
 			function calRoute() {
@@ -69,6 +77,57 @@
 					}
 				});
 			}
+
+			function drawLines() {
+				for(var i in routes) {
+					var route = routes[i];
+					new google.maps.Polyline({
+						path: route.path,
+						geodesic: true,
+						strokeColor: '#FF0000',
+						strokeOpacity: 1.0,
+						strokeWeight: 2,
+						map: map
+					});
+				}
+			}
+
+			function drawPoints(path) {
+				new google.maps.Polyline({
+					path: path,
+					geodesic: true,
+					strokeColor: '#FF0000',
+					strokeOpacity: 1.0,
+					strokeWeight: 2,
+					map: map
+				});
+			}
+
+			function drawCircle(lat, lng, radius) {
+
+				var R = 6371; // km
+				var dLat = (radius).toRad();
+				var dLon = (0).toRad();
+				var lat1 = lat.toRad();
+				var lat2 = lng.toRad();
+
+				var a = Math.sin(dLat/2) * Math.sin(dLat/2) +
+				        Math.sin(dLon/2) * Math.sin(dLon/2) * Math.cos(lat1) * Math.cos(lat2); 
+				var c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1-a)); 
+				var d = R * c;
+
+				var marker = new google.maps.Marker({
+					map: map,
+					position: new google.maps.LatLng(lat, lng)
+				});
+				var circle = new google.maps.Circle({
+					map: map,
+					radius: d * 1000,
+					fillColor: '#AA0000'
+				});
+				circle.bindTo('center', marker, 'position');
+			}
+
 	    </script>
 	    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBgkHA5_vNU7LySWusnD6INcO30iR37GqE&callback=initMap" async defer></script>
 	</body>	 
